--- a/Welington rodrigues/workspace/CSS/Exercico.css
+++ b/Welington rodrigues/workspace/CSS/Exercico.css
@@ -1,6 +1,11 @@
 * {
     background-color: #e1e3db;
     text-align: center;
+    font-size: 1rem;
+}
+
+.teste{
+    border: solid #70160e;
 }
 
 p{
@@ -25,5 +30,5 @@ header li{
 
 article h3{
     background-color: #70160e;
-    color: #e1e3db;
+    color: #e1e3db;     
 }
